--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="section-2">
             <h2>Digitalizing Construction</h2>
-            CEO of <a href="https://remato.com">Remato</a>
+            CEO&nbsp;of&nbsp;<a href="https://remato.com">Remato</a>
             <a href="mailto:ranno@remato.com">ranno@remato.com</a>
         </div>
     </div>
