--- a/index.html
+++ b/index.html
@@ -1,132 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <style>
-        /* global */
-        @import url('https://fonts.googleapis.com/css?family=Roboto');
-
-        .grid-2{
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-        }
-
-        body{
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: #101214;
-            color: #7A7C80;
-
-        }
-
-        h2,.white{
-            color: #fff;
-        }
-
-        a{
-            color: #7A7C80;
-            text-decoration: none;
-        }
-        /* section 1 */
-        .section-1{
-            padding-top: 40vh;
-            text-align: center;
-        }
-
-        .section-1 p{
-            font-size: 1.1rem;
-            padding-bottom: 10px;
-            margin:0;
-        }
-
-        .section-1 h2{
-            font-size: 1.7rem;
-            margin-bottom: 10px;
-        }
-
-        .section-1 a{
-            font-size: 1.5rem;
-            padding: 10px;
-        }
-        /* section 2 */
-        .section-2{
-            padding-top: 10vh;
-            width: 70%;
-        }
-
-        .section-2 h2{
-            font-size: 1.7rem;
-            margin-bottom: 10px;
-        }
-
-        .section-2 p{
-            font-size: 1.1rem;
-            padding-bottom: 10px;
-            margin:0;
-        }
-
-        .section-2 a{
-            display: block;
-            padding: 5px;
-            font-size: 1.2rem;
-            padding-left: 0;
-            width: 100px;
-        }
-        /* animations / utilities */
-        .section-2 a:hover{
-            font-size: 1.3rem;
-            color: #fff;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-
-        .section-1 a:hover{
-            color: #fff;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .white:hover{
-            position: relative;
-            padding-left: 10px;
-        }
-
-        /* media queres */
-        @media(max-width:780px){
-            .grid-2{
-                grid-template-columns: 1fr;
-            }
-            .section-1{
-                padding:0;
-                padding-top: 5rem;
-            }
-            .section-2{
-                padding: 0;
-                padding-left: 1.5rem;
-                padding-top: 2rem;
-            }
-        }
-    </style>
-    <title>Ranno Käomägi</title>
+	<title>Ranno Käomägi</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<style>
+		body {
+			font-family: 'Montserrat', sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+		
+		.container {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		
+		h1 {
+			font-family: 'Montserrat', sans-serif;
+			font-size: 3rem;
+			margin-bottom: 1rem;
+			text-align: center;
+			color: #333;
+		}
+		
+		a {
+			font-size: 1.5rem;
+			text-align: center;
+			text-decoration: none;
+			color: #333;
+			border: 2px solid #333;
+			padding: 0.5rem 1rem;
+			border-radius: 5px;
+			transition: all 0.3s ease;
+		}
+		
+		a:hover {
+			background-color: #333;
+			color: #fff;
+		}
+	</style>
 </head>
 <body>
-    <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>Ranno Käomägi</h2>
-            <p>Tartu, Estonia</p>
-            <a href="https://www.linkedin.com/in/rannooo/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/rannooo"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="section-2">
-            <h2>Digitalizing Construction</h2>
-            <a href="https://remato.com">Remato</a>
-            <a href="mailto:ranno@remato.com">ranno@remato.com</a>
-        </div>
-    </div>
+	<div class="container">
+		<h1>Ranno Käomägi</h1>
+		<a href="https://remato.com" target="_blank">Digitalising Construction</a>
+	</div>
 </body>
 </html>
