--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 	<div class="container">
 		<h1>Ranno Käomägi</h1>
-		<a href="https://remato.com" target="_blank">Digitalising Construction</a>
+		<a href="https://remato.com" target="_blank">Digitalizing Construction</a>
 	</div>
 </body>
 </html>
